--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -1,6 +1,12 @@
 :root {
 
     /*
+     * Colors
+     * ======================================================================== */
+
+    --app-bg:               #e5e5e5;
+
+    /*
      * Typography
      * ======================================================================== */
 
