--- a/src/components/IndexPage/IndexPage.css
+++ b/src/components/IndexPage/IndexPage.css
@@ -1,7 +1,5 @@
-@import '../variables.css';
 
-.IndexPage-container {
+.page {
     margin: 0 auto;
-    padding: 0 0 40px;
-    max-width: var(--max-content-width);
+    padding: 0 20px 40px;
 }
