compliance with code style

--- a/src/components/IndexPage/IndexPage.css
+++ b/src/components/IndexPage/IndexPage.css
@@ -1,5 +1,8 @@
 
-.page {
-    margin: 0 auto;
-    padding: 0 20px 40px;
+.index-page {
+    height: 100vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
