--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -95,6 +95,11 @@ textarea {
     resize: vertical;
 }
 
+.app-container {
+    margin: 0 auto;
+    padding: 0 20px 40px;
+}
+
 /*
  * Browser upgrade prompt
  * ========================================================================== */
