--- a/src/components/PostsList/PostsList.css
+++ b/src/components/PostsList/PostsList.css
@@ -1,8 +1,8 @@
 .posts-list {
     display: flex;
 
-    margin: 0 auto;
-    padding: 2em 0;
+    margin: .5em auto 0;
+    padding: 0 0 2em;
 
     align-content: flex-start;
     align-items: flex-start;
