Stick footer to the bottom of the window

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,8 @@
     color: #fff;
     border-top: 3px solid var(--header-bg--secondary);
     background: var(--footer-bg);
+
+    flex: none;
 }
 
 .footer__container {
