--- a/src/components/ErrorPage/ErrorPage.css
+++ b/src/components/ErrorPage/ErrorPage.css
@@ -1,3 +1,6 @@
+
+@import '../variables.css';
+
 html {
     display: table;
 
@@ -32,7 +35,7 @@ p {
     margin: 0 auto;
 }
 
-@media only screen and (max-width: --screen-xs-min) {
+@media (--mq-xs-min) {
     body, p {
         width: 95%;
     }
