--- a/src/components/NotFoundPage/NotFoundPage.css
+++ b/src/components/NotFoundPage/NotFoundPage.css
@@ -1,3 +1,6 @@
+
+@import '../variables.css';
+
 html {
     display: table;
 
@@ -32,7 +35,28 @@ p {
     margin: 0 auto;
 }
 
-@media only screen and (max-width: --screen-xs-min) {
+.not-found-page {
+    display: inline-block;
+    min-width: 650px;
+    max-width: var(--max-content-width);
+    margin: auto;
+    padding: 40px 20px 80px;
+    box-sizing: border-box;
+
+    border: 1px solid #d8d8d8;
+    border-top-width: 0;
+    border-bottom-width: 2px;
+    background-color: #fff;
+}
+
+@media (--mq-sm-min) {
+    .not-found-page {
+        min-width: 0;
+        width: 100%;
+    }
+}
+
+@media (--mq-xs-min) {
     body, p {
         width: 95%;
     }
@@ -41,5 +65,9 @@ p {
         margin: 0 0 .3em;
 
         font-size: 1.5em;
+    }
+
+    .not-found-page {
+        padding: 20px 20px 40px;
     }
 }
