--- a/src/components/mixins.css
+++ b/src/components/mixins.css
@@ -10,3 +10,14 @@
         clear: both;
     }
 }
+
+/* show content only to screen readers */
+@define-mixin sr-only {
+    position: absolute !important;
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0 !important;
+    border: 0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden;
+}
